# Tools

./: .gitignore  pyproject.toml
nn/blocks/: conv.py  resnet.py  transformer.py
nn/encoders/: vit.py
nn/transformers/: basic_transformer.py
prototyping/: encoding.ipynb
src/tools/: transformer.py
