[project]
name = "tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Balazs Szakter",email = "szakter.balu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = ["torch (>=2.9.1,<3.0.0)"]

[tool.poetry]
packages = [{include = "tools", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
