[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Balazs Szakter <szakter.balu@gmail.com>"]
readme = "README.md"
packages = [{include = "nn"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = ">=2.9.1,<3.0.0"
numpy = "^2.4.1"
opencv-python = "^4.13.0.90"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"